# rust-tapyrus

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: fuzz.yml  rust.yml
contrib/: release.sh  test.sh
examples/: handshake.rs
fuzz/: Cargo.toml  generate-files.sh
fuzz/fuzz_targets/: deser_net_msg.rs  deserialize_address.rs  deserialize_amount.rs  deserialize_block.rs  deserialize_psbt.rs  deserialize_script.rs  deserialize_transaction.rs  outpoint_string.rs  uint128_fuzz.rs
fuzz/fuzz_targets/bitcoin/: deserialize_address.rs  deserialize_witness.rs
fuzz/fuzz_targets/hashes/: cbor.rs  json.rs  ripemd160.rs  sha1.rs  sha256.rs  sha512.rs  sha512_256.rs
fuzz/fuzz_targets/tapyrus/: deser_net_msg.rs  deserialize_amount.rs  deserialize_block.rs  deserialize_prefilled_transaction.rs  deserialize_psbt.rs  deserialize_script.rs  deserialize_transaction.rs  deserialize_witness.rs  outpoint_string.rs  script_bytes_to_asm_fmt.rs
hashes/: Cargo.toml
hashes/embedded/: Cargo.toml
hashes/embedded/src/: main.rs
hashes/extended_tests/schemars/: Cargo.toml
hashes/extended_tests/schemars/src/: main.rs
hashes/src/: lib.rs  sha256d.rs  sha256t.rs  util.rs
internals/: Cargo.toml
internals/src/: lib.rs
internals/src/error/: parse_error.rs
src/: hash_types.rs  internal_macros.rs  lib.rs  test_helpers.rs
src/blockdata/: block.rs  constants.rs  opcodes.rs  script.rs  transaction.rs
src/consensus/: encode.rs  params.rs
src/network/: address.rs  constants.rs  message.rs  message_blockdata.rs  message_filter.rs  message_network.rs  mod.rs  stream_reader.rs
src/util/: address.rs  amount.rs  base58.rs  bip143.rs  bip158.rs  bip32.rs  contracthash.rs  endian.rs  hash.rs  key.rs  merkleblock.rs  misc.rs  mod.rs  prime.rs  rfc6979.rs  rfc7969.rs  signature.rs  uint.rs
src/util/psbt/: error.rs  macros.rs  mod.rs  raw.rs  serialize.rs
src/util/psbt/map/: global.rs  input.rs  mod.rs  output.rs
tapyrus/: CHANGELOG.md  Cargo.toml
tapyrus/contrib/: test.sh
tapyrus/embedded/: Cargo.toml
tapyrus/embedded/src/: main.rs
tapyrus/examples/: bip32.rs  ecdsa-psbt.rs  handshake.rs  sighash.rs  taproot-psbt.rs
tapyrus/src/: amount.rs  bip152.rs  bip158.rs  bip32.rs  hash_types.rs  lib.rs  network.rs  policy.rs  pow.rs  sign_message.rs  string.rs  taproot.rs
tapyrus/src/address/: error.rs  mod.rs
tapyrus/src/blockdata/: block.rs  constants.rs  fee_rate.rs  opcodes.rs  transaction.rs  witness.rs
tapyrus/src/blockdata/locktime/: absolute.rs  relative.rs
tapyrus/src/blockdata/script/: borrowed.rs  color_identifier.rs  mod.rs  owned.rs  push_bytes.rs  tests.rs  witness_version.rs
tapyrus/src/consensus/: encode.rs  params.rs  serde.rs  validation.rs
tapyrus/src/crypto/: ecdsa.rs  key.rs  mod.rs  prime.rs  rfc6979.rs  schnorr.rs  sighash.rs  test_helpers.rs
tapyrus/src/merkle_tree/: block.rs  mod.rs
tapyrus/src/p2p/: message.rs  message_blockdata.rs  message_network.rs  mod.rs
tapyrus/src/psbt/: error.rs  mod.rs
tapyrus/tests/: psbt.rs  serde.rs  serde_opcodes.rs
tapyrus/tests/data/: block_13b8a.hex  block_3ec84b_hex  blockfilters.json  merkle_block.hex  testnet_block_0ad80d57a3fec290b939d03d87f8e072e60c0ca436323d95116dda5278ff94f9_hex
tapyrus/tests/data/serde/: transaction_bincode  transaction_ser
