[package]
name = "tapyrus"
version = "0.1.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
license = "MIT"
homepage = "https://github.com/chaintope/rust-tapyrus/"
repository = "https://github.com/chaintope/rust-tapyrus/"
description = "General purpose library for using and interoperating with Tapyrus."
keywords = [ "crypto", "tapyrus" ]
readme = "README.md"

[lib]
name = "tapyrus"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
unstable = []
use-serde = ["serde", "bitcoin_hashes/serde"]

[dependencies]
bitcoin-bech32 = "0.9.0"
byteorder = "1.2"
bitcoin_hashes = "0.7"
bitcoinconsensus = { version = "0.16", optional = true }

[dependencies.serde]
version = "1.0.98"
features = ["derive"]
optional = true

[dependencies.hex]
version = "=0.3.2"

[dependencies.secp256k1]
version = "0.12"
features = [ "rand" ]

[dev-dependencies]
serde_derive = "=1.0.98"
serde_json = "1"
serde_test = "1"
