[package]
name = "tapyrus"
version = "0.4.0"
authors = ["Kohei Taniguchi <kohei@chaintope.com>", "Hajime Yamaguchi <h_yamaguchi@chaintope.com>"]
license = "MIT"
homepage = "https://github.com/chaintope/rust-tapyrus/"
repository = "https://github.com/chaintope/rust-tapyrus/"
description = "General purpose library for using and interoperating with Tapyrus."
keywords = [ "crypto", "tapyrus" ]
readme = "README.md"

[lib]
name = "tapyrus"
path = "src/lib.rs"

[features]
fuzztarget = ["secp256k1/fuzztarget", "bitcoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand"]
use-serde = ["hex", "serde", "bitcoin_hashes/serde", "secp256k1/serde"]

[dependencies]
bitcoin_hashes = "0.7.3"
secp256k1 = { git = "https://github.com/rantan/rust-secp256k1", branch = "add_negate_support", version = "0.17.2"}
rug = "1.7.0"

bitcoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", optional = true }
hex = { version = "=0.3.2", optional = true }

[dev-dependencies]
hex = "=0.3.2"
serde_derive = "<1.0.99"
serde_json = "<1.0.45"
serde_test = "1"
secp256k1 = { git = "https://github.com/rantan/rust-secp256k1", branch = "add_negate_support", features = ["rand-std"] }
