[package]
name = "tapyrus"
version = "0.4.8"
edition = "2024"
authors = ["Kohei Taniguchi <kohei@chaintope.com>", "Hajime Yamaguchi <h_yamaguchi@chaintope.com>"]
license = "MIT"
homepage = "https://github.com/chaintope/rust-tapyrus/"
repository = "https://github.com/chaintope/rust-tapyrus/"
description = "General purpose library for using and interoperating with Tapyrus."
keywords = [ "crypto", "tapyrus" ]
readme = "README.md"

[lib]
name = "tapyrus"
path = "src/lib.rs"

[features]
fuzztarget = ["bitcoin_hashes/fuzztarget"]
unstable = []
rand = ["secp256k1/rand"]
use-serde = ["serde", "bitcoin_hashes/serde", "secp256k1/serde"]

[dependencies]
bitcoin_hashes = "0.8.0"
secp256k1 = "0.22.2"
rug = "1.7.0"

bitcoinconsensus = { version = "0.19.0-1", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
hex = "=0.3.2"
serde_json = "<1.0.45"
serde_test = "1"
secp256k1 = { version = "0.22.2", features = ["rand-std"] }
