[package]
name = "tapyrus-internals"
version = "0.2.0"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>", "The Rust Bitcoin developers"]
license = "MIT"
homepage = "https://github.com/chaintope/rust-tapyrus/"
repository = "https://github.com/chaintope/rust-tapyrus/"
description = "Internal types and macros used by rust-tapyrus ecosystem"
categories = ["cryptography::cryptocurrencies"]
keywords = ["internal"]
readme = "README.md"
edition = "2018"
exclude = ["tests", "contrib"]

[features]
default = []
std = ["alloc"]
alloc = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde = { version = "1.0.103", default-features = false, optional = true }

[dev-dependencies]
